--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,3 +1,16 @@
+$color-primary: #3046C5;
+$color-secondary: #5637dd;
+$color-pale: #CEC8FF;
+$color-mid: #901CAD;
+$color-dark: #60106b;
+$color-transparent-black: rgba(0, 0, 0, 0.5);
+
+header {
+    h2 {
+        color: $color-pale;
+    }
+}
+
 body{
     font-family: "open sans," sans-serif;
 }
@@ -46,4 +59,9 @@ footer{
 
 .carousel {
     border: solid #5637DD;
+}
+#carouselButton {
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
